--- a/s-internet-1.html
+++ b/s-internet-1.html
@@ -140,7 +140,7 @@
                         
                     </p>
                     <p>
-                        
+                        Plus de la moitié de l'argent de la publicité va dans le web. https://www.washingtonpost.com/technology/2019/02/20/digital-advertising-surpass-print-tv-first-time-report-says/
                     </p>
                 </div>
             </div>
